unpackaged/main/default/objects/Case/fields/CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>CIF_Number__c</fullName>
    <formula>Account.CIFNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIF Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>