unpackaged/main/default/objects/Case/fields/Complaint_Theme__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Theme__c</fullName>
    <label>Complaint Theme</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Complaint_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Bancassurance</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Savings and Investments</fullName>
            </value>
            <value>
                <fullName>Agency Banking</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Internet Banking</fullName>
            </value>
            <value>
                <fullName>Mobile Banking</fullName>
            </value>
            <value>
                <fullName>Sales and Marketing</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>USSD</fullName>
            </value>
            <value>
                <fullName>Absa Mobile Wallet</fullName>
            </value>
            <value>
                <fullName>Mobile Service Provider Wallet</fullName>
            </value>
            <value>
                <fullName>Jumo Loans</fullName>
            </value>
            <value>
                <fullName>Timiza Loans</fullName>
            </value>
            <value>
                <fullName>Complaints Handling</fullName>
            </value>
            <value>
                <fullName>Data Privacy</fullName>
            </value>
            <value>
                <fullName>E-Statements</fullName>
            </value>
            <value>
                <fullName>Fees Charges</fullName>
            </value>
            <value>
                <fullName>Staff behavior</fullName>
            </value>
            <value>
                <fullName>Statements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>