unpackaged/main/default/objects/Case/fields/Compliance_Related__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Related__c</fullName>
    <label>Compliance Related</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>