unpackaged/main/default/objects/Case/fields/Customer_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expectation__c</fullName>
    <label>Expectation of the customer</label>
    <type>TextArea</type>
</CustomField>