unpackaged/main/default/objects/Case/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>