unpackaged/main/default/objects/Case/fields/ID_V_Completed__c.field-meta.xml
<CustomField>
    <fullName>ID_V_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID&amp;V Completed</label>
    <type>Checkbox</type>
</CustomField>