unpackaged/main/default/objects/Case/fields/ID_V_Level_Required__c.field-meta.xml
<CustomField>
    <fullName>ID_V_Level_Required__c</fullName>
    <label>ID&amp;V Level Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Lite</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>