unpackaged/main/default/objects/Case/fields/Incident_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date_Time__c</fullName>
    <label>Incident Date/Time</label>
    <type>DateTime</type>
</CustomField>