unpackaged/main/default/objects/Case/fields/MassSLA__c.field-meta.xml
<CustomField>
    <fullName>MassSLA__c</fullName>
    <label>Mass SLA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>