unpackaged/main/default/objects/Case/fields/Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address__c</fullName>
    <formula>Account.BillingStreet &amp; &quot;,&quot; &amp;  Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Address</label>
    <type>Text</type>
</CustomField>