unpackaged/main/default/objects/Case/fields/Premier_SLA__c.field-meta.xml
<CustomField>
    <fullName>Premier_SLA__c</fullName>
    <label>Premier SLA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>