unpackaged/main/default/objects/Case/fields/Primary_Contact_Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Business_Number__c</fullName>
    <label>Primary Contact Business Number</label>
    <type>Phone</type>
</CustomField>