unpackaged/main/default/objects/Case/fields/Resolved_FPOC__c.field-meta.xml
<CustomField>
    <fullName>Resolved_FPOC__c</fullName>
    <label>Resolved @FPOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>