unpackaged/main/default/objects/Case/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>(Text(Account.BusinessSegment__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>