unpackaged/main/default/objects/Case/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Complaint_Theme__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocked my account</fullName>
                <default>true</default>
                <label>Blocked my account</label>
            </value>
            <value>
                <fullName>Changing my personal details</fullName>
            </value>
            <value>
                <fullName>Cheques</fullName>
            </value>
            <value>
                <fullName>Closed my account without my permission</fullName>
            </value>
            <value>
                <fullName>Crediting funds to my account</fullName>
            </value>
            <value>
                <fullName>Disputed transaction</fullName>
            </value>
            <value>
                <fullName>My payment failed</fullName>
            </value>
            <value>
                <fullName>Not receiving my statements</fullName>
            </value>
            <value>
                <fullName>Opened an account without my permission</fullName>
            </value>
            <value>
                <fullName>Problems with opening / using my account</fullName>
            </value>
            <value>
                <fullName>Reserved funds on account</fullName>
            </value>
            <value>
                <fullName>Standing Orders</fullName>
            </value>
            <value>
                <fullName>Takes too long to close an account</fullName>
            </value>
            <value>
                <fullName>Unpaid transaction</fullName>
            </value>
            <value>
                <fullName>Did not process my insurance request</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>The insurance on my card</fullName>
            </value>
            <value>
                <fullName>Vehicle and Asset insurance</fullName>
            </value>
            <value>
                <fullName>Suspected Fraud</fullName>
            </value>
            <value>
                <fullName>Canceled my card without my permission</fullName>
            </value>
            <value>
                <fullName>Card blocked</fullName>
            </value>
            <value>
                <fullName>Card not working</fullName>
            </value>
            <value>
                <fullName>Delay in issuing or delivering my card</fullName>
            </value>
            <value>
                <fullName>Difficulty canceling or closing my card</fullName>
            </value>
            <value>
                <fullName>Issuing or re-setting the PIN on my card</fullName>
            </value>
            <value>
                <fullName>Made a mistake when they activated/issued my card</fullName>
            </value>
            <value>
                <fullName>My card was declined</fullName>
            </value>
            <value>
                <fullName>POS transaction did not go through</fullName>
            </value>
            <value>
                <fullName>Problems with changing the limit on my card</fullName>
            </value>
            <value>
                <fullName>Welcome kit incomplete - Absa Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>