unpackaged/main/default/objects/Case/fields/SME_SLA__c.field-meta.xml
<CustomField>
    <fullName>SME_SLA__c</fullName>
    <label>SME SLA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>