unpackaged/main/default/objects/Case/recordTypes/Complaints.recordType-meta.xml
<RecordType>
    <fullName>Complaints</fullName>
    <active>true</active>
    <businessProcess>Status</businessProcess>
    <label>Complaints</label>
</RecordType>