unpackaged/main/default/objects/Case/listViews/Complaint_Handling_Unit_Case.listView-meta.xml
<ListView>
    <fullName>Complaint_Handling_Unit_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaint Handling Unit</label>
    <queue>Complaint_Handling_Unit</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>