unpackaged/main/default/objects/Case/listViews/Risk_departments_Case.listView-meta.xml
<ListView>
    <fullName>Risk_departments_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Risk departments</label>
    <queue>Risk_departments</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>